compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__case_could_not_unify.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 291
expression: "case 1, 2.0 { a, b -> a 1, 2 -> 0 }"
snapshot_kind: text
---
----- SOURCE CODE
case 1, 2.0 { a, b -> a 1, 2 -> 0 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:28
  │
1 │ case 1, 2.0 { a, b -> a 1, 2 -> 0 }
  │                            ^

Expected type:

    Float

Found type:

    Int
